--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/g6": "^3.3.6",
     "ant-design-vue": "^1.4.10",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
@@ -32,7 +33,7 @@
       "eslint:recommended"
     ],
     "rules": {
-        "no-console":"off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
