--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@antv/g6": "^3.3.6",
     "ant-design-vue": "^1.4.10",
+    "bootstrap-vue": "^2.12.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "webpack": "^4.41.5"
